css/custom.css
:root {
    --light: #F9F9F9;
    --dark: #707E8F;
    --accent: #385bb9;
    --warning: #ffff99;
    --notice: #cce5ff;
}
html {
    position: relative;
    min-height: 100%;
}
body {
    background-color: var(--light);
    color: black;
    font-family: 'Raleway', sans-serif;
    margin-bottom: 3rem;
}
a {
    color: black;
}
a:active, a:focus, a:hover {
    color: black;
    text-decoration: underline;
}
ol {
    padding-right: 20px;
}
span {
    word-wrap: break-word;
}
.alert-caution {
    background-color: var(--warning);
    border-color: var(--dark);
    color: black;
    font-size: 0.85rem;
}
.alert-primary {
    background-color: notice;
    border-color: var(--dark);
    color: black;
    font-size: 0.85rem;
}
.code {
    font-family: 'Overpass Mono', monospace;
}
.footer {
    bottom: 0;
    height: 3rem;
    position: absolute;
    width: 100%;
}
.footer a:hover {
    text-decoration: none;
}
.highlight {
    color: var(--accent);
}
.highlight:hover {
    color: var(--accent);
}
.muted {
    color: var(--dark);
}
.navbar {
    background-color: var(--dark);
    font-size: 1rem;
}
.navbar a {
    color: var(--light);
}
.navbar a:hover {
    color: var(--light); 
    text-decoration-color: var(--light); 
}
.navbar-brand {
    font-size: 1.5rem;
}
.nav-link:active, .nav-link:focus, .nav-link:hover {
    text-decoration: underline;
    text-decoration-color: var(--light);
}
.navbar-toggler {
    color: var(--light);
    border-color: var(--light);
}
.navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(249, 249, 249, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}
.small {
    font-size: 0.85rem;
}
.padded li {
    margin-bottom: 1rem;
}
.vertical {
    vertical-align: -0.35rem;
}
.wrapper {
    width: 80%;
    max-width: 1280px;
}

